Added cost controller wo logic
