# api/cost/cost_controller.go
@@ -1,0 +1,78 @@
+package cost
+
+import (
+	"github.com/equinor/radix-cost-allocation-api/api/utils"
+	models "github.com/equinor/radix-cost-allocation-api/models"
+	"github.com/gorilla/mux"
+	"net/http"
+)
+
+const rootPath = ""
+
+type costController struct {
+	*models.DefaultController
+}
+
+// NewApplicationController Constructor
+func NewApplicationController() models.Controller {
+	return &costController{}
+}
+
+// GetRoutes List the supported routes of this controller
+func (costController *costController) GetRoutes() models.Routes {
+	routes := models.Routes{
+		models.Route{
+			Path:        rootPath + "/totalcost/{appName}",
+			Method:      "GET",
+			HandlerFunc: costController.GetTotalCost,
+		},
+	}
+
+	return routes
+}
+
+// GetTotalCost for an application
+func (costController *costController) GetTotalCost(accounts models.Accounts, w http.ResponseWriter, r *http.Request) {
+	// swagger:operation GET /totalcost/{appName} application getTotalCost
+	//
+	// ---
+	// summary: Gets the application application by name
+	// parameters:
+	// - name: appName
+	//   in: path
+	//   description: Name of application
+	//   type: string
+	//   required: true
+	// summary: Total cost for an application.
+	// parameters:
+	// - name: Impersonate-User
+	//   in: header
+	//   description: Works only with custom setup of cluster. Allow impersonation of test users (Required if Impersonate-Group is set)
+	//   type: string
+	//   required: false
+	// - name: Impersonate-Group
+	//   in: header
+	//   description: Works only with custom setup of cluster. Allow impersonation of test group (Required if Impersonate-User is set)
+	//   type: string
+	//   required: false
+	// responses:
+	//   "200":
+	//     description: "Successful operation"
+	//     schema:
+	//        "$ref": "#/definitions/Cost"
+	//   "401":
+	//     description: "Unauthorized"
+	//   "404":
+	//     description: "Not found"
+	appName := mux.Vars(r)["appName"]
+
+	handler := Init(accounts)
+	cost, err := handler.GetTotalCost(appName)
+
+	if err != nil {
+		utils.ErrorResponse(w, r, err)
+		return
+	}
+
+	utils.JSONResponse(w, r, cost)
+}
